test/compile-fail/identifier/impl-path-segment-keyword/expected.txt
error: `r#super` cannot be a raw identifier
 --> top.rhdl:3:7
  |
3 |     fn r#super() {}
  |        ^^^^^^^ 
